MANTIS-18110: removed Java 9 method (compliance level still Java 8)